--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 		<section id="contact" class="dark_bg section-padding">      
 			<div class="contact-form">
 				<div class="container">
-					<h2 class="section-title wow flipInX" data-wow-delay="0.4s">Contact <span>Us</span></h2>  
+					<h2 class="section-title wow flipInX" data-wow-delay="0.4s">Contact <span>Me</span></h2>  
 					<style>
 						.center-div {
 							margin: 0 auto;
@@ -449,7 +449,7 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
-								<p>Copyright © 2024  | All Rights Reserved</p>
+								<p>Copyright to sandeep © 2024  | All Rights Reserved</p>
 							</div>
 						</div>
 					</div>
