--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div class="loader-outter"></div>
 					<div class="loader-inner"></div>
 
-					<span>MC</span>
+					<span>SA</span>
 				</div>
 			</div>
 		<!-- END PRELOADER -->		
